# code_opt

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  evaluate.py  problems.py  review.py  submissions.py
backend/app/services/: __init__.py  llm_service.py
frontend/: README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: CodeEditor.vue  MarkdownViewer.vue  ModelConfig.vue  WorkspacePanel.vue
frontend/src/router/: index.ts
frontend/src/stores/: editor.ts  modelConfig.ts  theme.ts
frontend/src/types/: index.ts
frontend/src/views/: HistoryView.vue  HomeView.vue  ReviewView.vue
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
